contact page added

--- a/contact.html
+++ b/contact.html
@@ -43,77 +43,17 @@
     </header>
 
     <!-- End of header -->
-    <section class="hero">
+    <section class="hero" style="margin-bottom: 500px;">
         <div>
             <div class="contianer">
-                <h2 class="center-align white-text about-us">About Us</h2>
+                <h2 class="center-align white-text about-us">contact Us</h2>
             </div>
         </div>
     </section>
 
     <!-- Welcome  -->
 
-    <section class="welcome">
-        <div>
-            <div class="container">
-                <div class="card-panel">
-                    <div class="center-align">
-                        <h6 class="center-align">Welcome</h6>
-                        <h5>Delightsome Educational <br> Institute</h5>
-                        <p class="">
-                            Welcome!  We’re glad you ‘re giving your child the future of education, and  the future is now! We’re 
-                            excited to empower you DEI parents and DEI students to be active, engaged partners in learning,
-                            offering new ways to personalize how schools teach and inspire today’s students. Education has moved
-                            and we are now in the future! Over the past 5 years, I have been in hundreds of homes, sitting down with
-                            parents, hearing them share the struggle their children go through and how school seems not to be
-                            meeting their children needs, especially a child’s specific need.  
-                        </p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- End of Welcome -->
-
-    <!-- Who we are  -->
-
-    <section class="offers">
-        <div >
-            <div class="container">
-                <div class="row">
-                    <div class="col s12 m6 l6">
-                        <div>
-                            <p>
-                                We provide lessons and tutorials for your various examination preparation.
-
-                            </p> 
-                            <p>We are designed basically to
-                                prepare & support students in getting admission to
-                                higher institutions.
-                            </p>
-                              <p>We support parents and students with school set up and logistics questions</p> 
-                              <p>We support parents and schools with basic computer set up with navigation and trouble shooting  when necessary.</p>
-                           <p>We work with the administration to provide students with standardized tests covering all that has been taught twice a month. </p>
-                           <p>We educate and encourage students on career and life plan,not withstanding the age range
-                           </p>
-                           <p>We prepare our students for today's world through various ICT skills 
-                           </p>
-                           <p>All we do with leadership and Excellence
-                             </p>
-                        </div>
-                    </div>
-                    <div class="col s12 m6 l6 image-background">
-                        <div>
-                            <img src="img/edvin-johansson-UGGinojhaC0-unsplash.jpg" class="responsive-img" alt="">
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-
-
+   
     <!-- End of who we are -->
 
     <section class="parallex">
