--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                             <li><a href="index.html" class="black-text">Home</a></li>
                             <li><a href="About.html" class="black-text">About</a></li>
                             <li><a href="program.html" class="black-text">Programs</a></li>    
-                            <li><a href="index.html" class="black-text">Contact</a></li>
+                            <li><a href="contact.html" class="black-text">Contact</a></li>
                         </ul>
                     </div>
                 </div>
@@ -40,7 +40,7 @@
             <li><a href="index.html" class="">Home</a></li>
             <li><a href="About.html" class="">About</a></li>
             <li><a href="program.html" class="">Programs</a></li>        
-            <li><a href="index.html" class="">Contact</a></li>
+            <li><a href="contact.html" class="">Contact</a></li>
         </ul>
     </header>
 
