--- a/About.html
+++ b/About.html
@@ -84,22 +84,22 @@
                 <div class="row">
                     <div class="col s12 m6 l6">
                         <div>
-                            <p>
+                            <p> <img src="img/Ellipse 41.png" alt="">
                                 We provide lessons and tutorials for your various examination preparation.
 
                             </p> 
-                            <p>We are designed basically to
+                            <p> <img src="img/Ellipse 41.png" alt=""> We are designed basically to
                                 prepare & support students in getting admission to
                                 higher institutions.
                             </p>
-                              <p>We support parents and students with school set up and logistics questions</p> 
-                              <p>We support parents and schools with basic computer set up with navigation and trouble shooting  when necessary.</p>
-                           <p>We work with the administration to provide students with standardized tests covering all that has been taught twice a month. </p>
-                           <p>We educate and encourage students on career and life plan,not withstanding the age range
+                              <p> <img src="img/Ellipse 41.png" alt=""> We support parents and students with school set up and logistics questions</p> 
+                              <p> <img src="img/Ellipse 41.png" alt=""> We support parents and schools with basic computer set up with navigation and trouble shooting  when necessary.</p>
+                           <p> <img src="img/Ellipse 41.png" alt=""> We work with the administration to provide students with standardized tests covering all that has been taught twice a month. </p>
+                           <p> <img src="img/Ellipse 41.png" alt=""> We educate and encourage students on career and life plan,not withstanding the age range
                            </p>
-                           <p>We prepare our students for today's world through various ICT skills 
+                           <p> <img src="img/Ellipse 41.png" alt=""> We prepare our students for today's world through various ICT skills 
                            </p>
-                           <p>All we do with leadership and Excellence
+                           <p > <img src="img/Ellipse 41.png" alt=""> All we do with leadership and Excellence
                              </p>
                         </div>
                     </div>
