--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Us</title>
     <link rel="stylesheet" href="css/materialize.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/contact.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;600;700;800&display=swap" rel="stylesheet">
     <script src="js/all.js"></script>
@@ -43,17 +43,54 @@
     </header>
 
     <!-- End of header -->
-    <section class="hero" style="margin-bottom: 500px;">
+    <section class="hero" style="margin-bottom: 100px;">
         <div>
             <div class="contianer">
-                <h2 class="center-align white-text about-us">contact Us</h2>
+                <h2 class="center-align white-text about-us">Contact Us</h2>
             </div>
         </div>
     </section>
 
     <!-- Welcome  -->
+    
+    <section>
+        <div>
+            <div class="container">
+                <div class="row">
+                    <div class="col s12 m6 l6 ">
+                        <h4>Send Us a Message</h4>
+                        <div class="card-panel">
+                            <div class="input-field">
+                                <label for="Name">Name</label>
+                                <input type="text">
+                            </div>
+                            <div class="input-field">
+                                <label for="email">Email</label>
+                                <input type="email">
+                            </div>
+                            <div class="input-field">
+                                <label for="email">Phone</label>
+                                <input type="email">
+                            </div>
+                            <div class="input-field">
+                                <label for="Message">Message</label>
+                                <textarea name="message" class="materialize-textarea"></textarea>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col s12 m6">
+                        <h4>Google Map</h4>
+                        <div>
 
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
    
+
+    
     <!-- End of who we are -->
 
     <section class="parallex">
