--- a/contact.html
+++ b/contact.html
@@ -76,6 +76,7 @@
                                 <label for="Message">Message</label>
                                 <textarea name="message" class="materialize-textarea"></textarea>
                             </div>
+                            <a href="" class="custom-button" >Send Message</a>
                         </div>
                     </div>
                     <div class="col s12 m6">
