--- a/contact.html
+++ b/contact.html
@@ -80,7 +80,7 @@
                         </div>
                     </div>
                     <div class="col s12 m6">
-                        <h4>Google Map</h4>
+                        <!-- <h4>Google Map</h4> -->
                         <div>
 
                         </div>
