--- a/program.html
+++ b/program.html
@@ -63,7 +63,7 @@
                          
                             <ul class="collapsible" data-collapsible="accordion">
                                 <li>
-                                  <div class="collapsible-header"><h6>Microsoft Suite</h6></div>
+                                  <div class="collapsible-header"><h6>Microsoft Suite </h6> <i class="material-icons large center red-text" style="padding-top:8px;">keyboard_arrow_down</i></div>
                                     <div class="collapsible-body">
 
                                         <P>
@@ -99,7 +99,7 @@
                                     <div>
                                 </li>
                                 <li>
-                                  <div class="collapsible-header"><h6>Web Design & Designs</h6></div>
+                                  <div class="collapsible-header"><h6>Web Design & Designs</h6><i class="material-icons large center red-text" style="padding-top:8px;">keyboard_arrow_down</i></div>
                                   <div class="collapsible-body">
                                       <p>
                                         In a world that is now predominantly digital, there are a number of jobs that are constantly in demand. One of the most creative of all these jobs is a web designer. Becoming a web designer allows you to use your creativity, following briefs and putting your own individual spin and style on them. 
@@ -132,7 +132,7 @@
                                   </div>
                                 </li>
                                 <li>
-                                  <div class="collapsible-header"><h6>Animation & Robotics</h6></div>
+                                  <div class="collapsible-header"><h6>Animation & Robotics</h6><i class="material-icons large center red-text" style="padding-top:8px;">keyboard_arrow_down</i></div>
                                   <div class="collapsible-body">
                                       <p>
                                         The field of animation and robotics can be said to have experienced explosive growth over the past decades. <br> The advent and availability of improved tools have not only made animators more efficient but has also made the field a more lucrative one. <br> Considering the diverse uses of animation, from being used as television commercials by firms to transmitting a great story in a movie not forgetting the very popular video games and also cartoon for children.
@@ -145,7 +145,7 @@
                                   </div>
                                 </li>
                                 <li>
-                                    <div class="collapsible-header"><h6> Graphics Designs</h6></div>
+                                    <div class="collapsible-header"><h6> Graphics Designs</h6><i class="material-icons large center red-text" style="padding-top:8px;">keyboard_arrow_down</i></div>
                                     <div class="collapsible-body">
                                         <p>
                                             Graphics design can be said to be the pillar upon which the media revolves. <br> Every brand would at one time or another require the services of a graphic designer. Hence, creative graphic designers are in constant demand by brand & advertisement companies, movie, films, printing, publishing, game, and animation industry.
@@ -166,7 +166,7 @@
                                     </div>
                                 </li>
                                 <li>
-                                    <div class="collapsible-header"><h6> App Development </h6></div>
+                                    <div class="collapsible-header"><h6> App Development </h6><i class="material-icons large center red-text" style="padding-top:8px;">keyboard_arrow_down</i></div>
                                     <div class="collapsible-body">
                                         <p>
                                             App Development has been at the forefront of ICT for a very long time making it to be growing daily as so many people/organizations will continue to use software/application to solve their day to day problems. <br> We are uniquely positioned at Delightsome Educational Institute (DEI) to drive this change and innovation through our app development program.
@@ -180,7 +180,7 @@
                                     </div>
                                 </li>
                                 <li>
-                                    <div class="collapsible-header"><h6> Data Analysis </h6></div>
+                                    <div class="collapsible-header"><h6> Data Analysis </h6><i class="material-icons large center red-text" style="padding-top:8px;">keyboard_arrow_down</i></div>
                                     <div class="collapsible-body">
                                         <p>
                                             Do you want to change career​, enhance your current skill-set or train your employees​? Delightsome Educational Institute (DEI) ​​Data analysis program can help​ you! <br>
