--- a/program.html
+++ b/program.html
@@ -99,7 +99,7 @@
                                     <div>
                                 </li>
                                 <li>
-                                  <div class="collapsible-header"><h6>Web Design & Designs</h6><i class="material-icons large center red-text" style="padding-top:8px;">keyboard_arrow_down</i></div>
+                                  <div class="collapsible-header"><h6>Web Design & Development</h6><i class="material-icons large center red-text" style="padding-top:8px;">keyboard_arrow_down</i></div>
                                   <div class="collapsible-body">
                                       <p>
                                         In a world that is now predominantly digital, there are a number of jobs that are constantly in demand. One of the most creative of all these jobs is a web designer. Becoming a web designer allows you to use your creativity, following briefs and putting your own individual spin and style on them. 
