--- a/index.html
+++ b/index.html
@@ -232,27 +232,21 @@
         <div class="head-one custom-font">Our Tutors</div>
             <div class="container">
                 <div class="row">
-                    <div class="col s12 m6 l3 center-align">
-                        <div data-aos="flip-left"><img src="img/tutor1 1.png" alt="" ></div>
-                       <div>
-                        <p class="tutors">Dada Oluwatosin</p6>
-                        <p class="tutor-work">Photographer</p>
-                       </div>
-                    </div>
-                    <div class="col s12 m6 l3 center-align">
-                        <div data-aos="flip-left"><img src="img/tutor2.png" alt="" ></div>
+                    <div class="col s12 m6 l4 center-align">
+                        <img src="img/WhatsApp Image 2021-03-07 at 14.11.01.jpeg"  style="height:300px; width: 230px; object-fit:cover;"  alt="" >
                         <p class="tutors">Abigail Yetunde</p>
                         <p class="tutor-work">Graphic Designer</p>
                     </div>
-                    <div class="col s12 m6 l3 center-align">
-                        <div data-aos="flip-right"><img src="img/tutor3.png" alt="" ></div>
+                    
+                    <div class="col s12 m6 l4 center-align">
+                        <img src="img/WhatsApp Image 2021-03-15 at 19.25.50 (1).jpeg" style="height:300px; width: 230px; object-fit:cover;" alt="" >
                         <p class="tutors">Adekunle Adeniyi</p>
                         <p class="tutor-work">Content Writer</p>
                     </div>
-                    <div class="col s12 m6 l3 center-align">
-                        <div data-aos="flip-right"><img src="img/tutor4.png" alt="" ></div>
-                        <p class="tutors">Femi Ayesoro</p>
-                        <p class="tutor-work">Web Developer </p>
+                    <div class="col s12 m6 l4 center-align">
+                        <img src="img/WhatsApp Image 2021-03-07 at 14.09.16.jpeg" style="height:300px; width: 230px; object-fit:cover;" alt="" >
+                        <p class="tutors">Adekunle Adeniyi</p>
+                        <p class="tutor-work">Content Writer</p>
                     </div>
                 </div>
             </div>
@@ -344,7 +338,7 @@
                         <a href="#" class="tooltipped btn-floating btn-small indigo darken-4" data-tooltip="This is a twitter">
                             <i class="fab fa-twitter"></i>
                         </a>
-                    <p>delightsometutors@gmail.com</p>
+                       <p>delightsomeinstitute@gmail.com</p>
                     </div>
                 </div>
                 <div class="center-align">&copy; 2020 Delightsome Educational Institue</div>
