--- a/program.html
+++ b/program.html
@@ -6,6 +6,7 @@
     <title>Programs</title>
     <link rel="stylesheet" href="css/materialize.css">
     <link rel="stylesheet" href="css/program.css">
+    <link rel="shortcut icon" type="image/png" href="img/favicon-16x16.png">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;600;700;800&display=swap" rel="stylesheet">
     <script src="js/all.js"></script>
@@ -14,20 +15,20 @@
 
     <!-- header -->
     
-    <header class="nav-header">
+    <header class="nav-header" >
         <div class="navbar-fixed">
-            <nav class="white">
+            <nav class="white" style="height: 100px;">
                 <div class="container">
                     <div class="nav-wrapper">
-                        <a href="#" class="brand-logo header left black-text"><img src="img/Desktop - 1.png"  alt=""></a>
+                        <a href="#" class="brand-logo header left black-text"> <img style="height: 100px; width: 100px;" src="img/logo2.svg" alt=""></a>
                         <!-- <a href="#" class="brand-logo left">  Delightsome <br> Educational Institue</a> -->
-                        <a href="#" data-target="mobile-nav" class="sidenav-trigger right">
+                        <a style="padding-top: 20px;"  href="#" data-target="mobile-nav" class="sidenav-trigger right">
                             <i class="material-icons left red-text" style="font-size:3rem;">menu</i>
                         </a>
-                        <ul class="right hide-on-med-and-down">
+                        <ul style="padding-top: 20px;" class="right hide-on-med-and-down">
                             <li><a href="index.html" class="black-text">Home</a></li>
                             <li><a href="About.html" class="black-text">About</a></li>
-                            <li><a href="program.html" class="black-text">Programs</a></li>                    
+                            <li><a href="program.html" class="black-text">Programs</a></li>    
                             <li><a href="contact.html" class="black-text">Contact</a></li>
                         </ul>
                     </div>
@@ -37,11 +38,10 @@
         <ul class="sidenav" id="mobile-nav">
             <li><a href="index.html" class="">Home</a></li>
             <li><a href="About.html" class="">About</a></li>
-            <li><a href="program.html" class="">Programs</a></li>     
+            <li><a href="program.html" class="">Programs</a></li>        
             <li><a href="contact.html" class="">Contact</a></li>
         </ul>
     </header>
-
     <!-- End of header -->
     <section class="hero">
         <div>
