--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Delightsome Educational Institue</title>
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/materialize.css">
-   
+    <link rel="shortcut icon" type="image/png" href="img/favicon-16x16.png">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Lora:wght@400;500;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;600;700;800&display=swap" rel="stylesheet">
@@ -16,15 +16,15 @@
    
     <header class="nav-header" >
         <div class="navbar-fixed">
-            <nav class="white">
+            <nav class="white" style="height: 100px;">
                 <div class="container">
                     <div class="nav-wrapper">
-                        <a href="#" class="brand-logo header left black-text"><img src="img/Desktop - 1.png"  alt=""></a>
+                        <a href="#" class="brand-logo header left black-text"> <img style="height: 100px; width: 100px;" src="img/logo2.svg" alt=""></a>
                         <!-- <a href="#" class="brand-logo left">  Delightsome <br> Educational Institue</a> -->
-                        <a href="#" data-target="mobile-nav" class="sidenav-trigger right">
+                        <a style="padding-top: 20px;"  href="#" data-target="mobile-nav" class="sidenav-trigger right">
                             <i class="material-icons left red-text" style="font-size:3rem;">menu</i>
                         </a>
-                        <ul class="right hide-on-med-and-down">
+                        <ul style="padding-top: 20px;" class="right hide-on-med-and-down">
                             <li><a href="index.html" class="black-text">Home</a></li>
                             <li><a href="About.html" class="black-text">About</a></li>
                             <li><a href="program.html" class="black-text">Programs</a></li>    
@@ -47,7 +47,7 @@
     <section class="slider">
         <ul class="slides">
             <li>
-                <img src="img/one 11.png" alt="">
+                <img src="img/MacBook - 1.png" alt="">
                 <div class="caption center-align">
                     <h4 class="custom-font">
                         Every child needs personalized education, <br> this is the future of education.
@@ -58,7 +58,7 @@
                 </div>
             </li>
             <li>
-                <img src="img/two 11.png" alt="">
+                <img src="img/MacBook - 1.png" alt="">
                 <div class="caption center-align">
                     <h4 class="custom-font">
                         Every child needs personalized education, <br> this is the future of education.
@@ -69,7 +69,7 @@
                 </div>
             </li>
             <li>
-                <img src="img/three 11.png" alt="">
+                <img src="img/MacBook - 1.png" alt="">
                 <div class="caption center-align">
                   <h4 class="custom-font">
                     Every child needs personalized education, <br> this is the future of education.
@@ -131,7 +131,7 @@
         <div class="container">
             <div class="row blocks-line">
                 <div class="col s12 m6 l6" >
-                    <img src="img/cdc-UqTrGSohyCs-unsplash.jpg" class="responsive-img" alt="">
+                    <img src="img/ict.jpg" class="responsive-img" alt="">
                 </div>
                 <div class="col s12 m6 l6">
                     <h4><span style="font-weight:700; color: grey;" >DEI</span> ICT</h4>
@@ -217,7 +217,7 @@
                     </div>
                 </div>
                 <div class="col s12 m6 l6 card-view" >
-                    <img src="img/cdc-UqTrGSohyCs-unsplash.jpg" class="responsive-img" alt="">
+                    <img src="img/olufemi.jfif" class="responsive-img" alt="">
                 </div>
             </div>
          </div>
@@ -232,7 +232,7 @@
                 <div class="row">
                     <div class="col s12 m6 l4 center-align">
                         <img src="img/WhatsApp Image 2021-03-07 at 14.11.01.jpeg" class="responsive-img"  alt="" >
-                        <p class="tutors">Abigail Yetunde</p>
+                        <p class="tutors">Olufemi Yetunde Olajumoke<p>
                         <p class="tutor-work">Graphic Designer</p>
                     </div>
                     
@@ -244,7 +244,7 @@
                     <div class="col s12 m6 l4 center-align">
                         <img src="img/WhatsApp Image 2021-03-07 at 14.09.16.jpeg" class="responsive-img"  alt="" >
                         <p class="tutors">John Fatanmi</p>
-                        <p class="tutor-work">Media and public relations officer</p>
+                        <p class="tutor-work">Media and Public Relations Executive</p>
                     </div>
                 </div>
             </div>
@@ -283,9 +283,10 @@
                 <div class="card-panel">
                     <div>
                         <p>
-                             The institute understand the peculiarities of each child and use it as an advantage to upgrade their learning system. My two daughters are doing excellently well in their studies and have been listed among the best students in their classes.
+                             The institute understand the peculiarities of each child and use it as an advantage to upgrade their learning system.
+                              My two daughters are doing excellently well in their studies and have been listed among the best students in their classes.
                         </p>
-                        <p class="right-align test-head">Mrs XYZ </p>
+                        <p class="right-align test-head">Mrs Ayorinde</p>
                     </div>
                 </div>
             </div>
