--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <section class="slider">
         <ul class="slides">
             <li>
-                <img src="img/MacBook - 1.png" alt="">
+                <img src="img/children-school.png" alt="">
                 <div class="caption center-align">
                     <h4 class="custom-font">
                         Every child needs personalized education, <br> this is the future of education.
@@ -58,7 +58,7 @@
                 </div>
             </li>
             <li>
-                <img src="img/MacBook - 1.png" alt="">
+                <img src="img/children-school.png" alt="">
                 <div class="caption center-align">
                     <h4 class="custom-font">
                         Every child needs personalized education, <br> this is the future of education.
@@ -69,7 +69,7 @@
                 </div>
             </li>
             <li>
-                <img src="img/MacBook - 1.png" alt="">
+                <img src="img/children-school.png" alt="">
                 <div class="caption center-align">
                   <h4 class="custom-font">
                     Every child needs personalized education, <br> this is the future of education.
